--- a/DoorAndKeys/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DoorAndKeys/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -207,15 +207,17 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Key.BP_Key
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Holder.BP_Holder
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Door.BP_Door
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_Door
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_Holder
-MRUItem2=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_Door
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_Holder
 MRUItem3=/Game/ThirdPerson/Blueprints/BP_Key
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
 MRUItem5=/Game/Characters/Mannequins/Meshes/SK_Mannequin
 MRUItem6=/Game/ThirdPerson/Maps/ThirdPersonMap
 
@@ -592,8 +594,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=345.333 Y=0.000
-WindowSize=X=1288.000 Y=728.000
+ScreenPosition=X=344.667 Y=0.000
+WindowSize=X=1290.000 Y=730.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1685,7 +1687,7 @@ BP_ThirdPersonCharacter_C=BoxComponent.Collision.Collision,K2Node_VariableGet.De
 StaticMeshComponent=BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Actors to Ignore,PropertyWrapper.DefaultValueCategory.Actors to Ignore,K2Node_VariableSet.DefaultValueCategory.Actors to Ignore,
 SceneComponent=
-SkeletalMeshComponent=BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Actors to Ignore,PropertyWrapper.DefaultValueCategory.Actors to Ignore,K2Node_VariableSet.DefaultValueCategory.Actors to Ignore,
+SkeletalMeshComponent=
 BP_Holder_C=BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Actors to Ignore,PropertyWrapper.DefaultValueCategory.Actors to Ignore,K2Node_VariableSet.DefaultValueCategory.Actors to Ignore,
 CapsuleComponent=
 StaticMeshActor=BoxComponent.Collision.Collision,
@@ -1700,19 +1702,19 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 Object=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent=
 PreviewMeshCollection=
 DataAsset=
 BP_ThirdPersonCharacter_C=
 Character=
 Pawn=
-SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SkeletalMeshComponent=
+SkinnedMeshComponent=
 
 [PlacementMode]
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_Holder.BP_Holder;
